more bugs fixed

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -145,7 +145,7 @@
     "ts = []\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=1e3)\n",
+    "    clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=1e3,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=1e3,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
@@ -485,6 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#stat_list\n",
     "#player_stats[2019]['Stephen Curry']['per_minute'][0][14]"
    ]
@@ -593,11 +594,13 @@
     "\n",
     "for team in all_tables[tyear[0]]:\n",
     "    for name in all_tables[tyear[0]][team]['roster'].index:\n",
+    "        name = name.replace('\\xa0\\xa0',' ')\n",
     "        nsplit = name.split(' ')\n",
-    "        if nsplit[-1] in ['Jr.','Sr.','I','II','III',\"IV\",'(TW)']:\n",
+    "        if nsplit[-1] in ['Jr.','Sr.','I','II','III',\"IV\",'(TW)','Jr','Sr']:\n",
     "            name = ' '.join(nsplit[:-1])\n",
     "        rosters[name] = team\n",
-    "    #print(team,)\n"
+    "    #print(team,)\n",
+    "print(rosters)"
    ]
   },
   {
@@ -633,6 +636,8 @@
     "abbrev_to_tid['SDC'] = abbrev_to_tid['LAC']\n",
     "abbrev_to_tid['WSB'] = abbrev_to_tid['WAS']\n",
     "abbrev_to_tid['CHH'] = abbrev_to_tid['CHA']\n",
+    "abbrev_to_tid['VAN'] = abbrev_to_tid['MEM']\n",
+    "abbrev_to_tid['NOK'] = abbrev_to_tid['NOP']\n",
     "\n",
     "base['startingSeason'] = tyear[0]\n",
     "valid_tids = {abbrev_to_tid[_] for _ in teams}\n",
@@ -654,14 +659,28 @@
     "players_discard = [_ for _ in playersOG if  _['tid'] > -3 ]\n",
     "players_FA = [_ for _ in playersOG if  _['tid'] == -1 ]\n",
     "\n",
-    "players_to_keep = []#[-1,-2,-4,-5]\n",
     "\n",
     "#-2 is for undrafted players the ongoing or upcoming draft\n",
     "#-4 is for prospects in next year's draft\n",
     "#-5 is for prospects in the draft after that.\n",
     "players = []\n",
     "if GEN_YEAR == CURRENT_YEAR:\n",
-    "    players += [_ for _ in playersOG if _['tid'] in [-1,-2,-4,-5]]\n",
+    "    players_to_keep = []\n",
+    "    for p in playersOG:\n",
+    "        if not 'name' in p:\n",
+    "            p['name'] = p['firstName'] + ' ' + p['lastName']\n",
+    "        pname = p['name']\n",
+    "        psplit = pname.split(' ')\n",
+    "        if psplit[-1] in ['Jr','Sr','Jr.',\"Sr.\",'III',\"II\"]:\n",
+    "            pname = ' '.join(psplit[:-1])\n",
+    "        if p['tid'] in [-2,-4,-5]:\n",
+    "            players.append(p)\n",
+    "        elif p['tid'] in [-1]:\n",
+    "            if pname in player_stats[GEN_YEAR]:\n",
+    "                continue\n",
+    "            else:\n",
+    "                players.append(p)\n",
+    "    #players += [_ for _ in playersOG if _['tid'] in [-1,-2,-4,-5]]\n",
     "elif GEN_YEAR == CURRENT_YEAR-1:\n",
     "    for player in playersOG:\n",
     "        if player['tid'] == -2:\n",
@@ -823,6 +842,17 @@
     "            ctrct = [float(_) for _ in player_stats[py][name]['contracts'][0] if _.replace('\\xa0','0.5') != '0.5']\n",
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':CURRENT_YEAR-1+len(ctrct)}\n",
+    "    elif name in player_stats[py]:\n",
+    "        if py == GEN_YEAR:\n",
+    "            tid = -1\n",
+    "        else:\n",
+    "            continue\n",
+    "\n",
+    "        new_player['tid'] = tid\n",
+    "        new_player['pos'] = 'GF'\n",
+    "        new_player['weight'] = 200\n",
+    "        new_player['hgt'] = 6*12 + 8\n",
+    "        new_player['born'] = {'year':GEN_YEAR-28,'loc':''}\n",
     "    elif i > Xn.shape[0]:\n",
     "        print(name)\n",
     "        new_player['tid'] = int(-1)\n",
@@ -838,8 +868,16 @@
     "    #    print(new_player)\n",
     "    #print(year_gap)\n",
     "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
-    "    new_player['ratings'] = [{k: int(scale_rookie*np.clip(ratings_f[i,y_keys.index(km)],0,100)) for k,km in y_map.items()}]\n",
-    "    \n",
+    "    sub_rookie = [0,-2,-4,-6][year_gap]\n",
+    "    r_vec = {k: scale_rookie*ratings_f[i,y_keys.index(km)]+sub_rookie for k,km in y_map.items()}\n",
+    "    #print(y_map.keys())\n",
+    "    r_vec['endu'] -= 4.5*year_gap\n",
+    "    r_vec['diq'] -= 4*year_gap\n",
+    "    r_vec['oiq'] -= 4*year_gap\n",
+    "    r_vec = {k: int(np.clip(v,0,100)) for k,v in r_vec.items()}\n",
+    "\n",
+    "    new_player['ratings'] = [r_vec]\n",
+    "    #new_player['ratings']\n",
     "    players.append(new_player)\n",
     "    #if name in ['Luka Doncic']: #\"Trevon Duval\",'LeBron James'\n",
     "        #print(py,exp_years)\n",
@@ -872,7 +910,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[p for p in players if 'pos' in p]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_stats[2019]['Kostas Antetokounmpo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Kostas Antetokounmpo' in rosters"
+   ]
   },
   {
    "cell_type": "code",
@@ -893,14 +960,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
