--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players,base = load_roster('base_roster.json')\n",
+    "players,base = load_roster('2019-20.NBA.Roster.json')\n",
     "abbrev_to_tid = {_['abbrev']:_['tid']for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
@@ -117,7 +117,7 @@
    "source": [
     "import scipy.stats\n",
     "stats_correct = {}\n",
-    "\n",
+    "print(len(players))\n",
     "# hack for 3pt\n",
     "xp = np.linspace(0,100,101)\n",
     "yp = np.exp(-(xp)**2/(15)**2)\n",
@@ -126,8 +126,8 @@
     "plt.plot(yp)\n",
     "\n",
     "# remove tp fix for normal leagues\n",
-    "if len(players) < 600:\n",
-    "    yp = np.ones_like(yp)\n",
+    "#if len(players) > 100:\n",
+    "#    yp = np.ones_like(yp)\n",
     "\n",
     "for key in current_ratings.columns:\n",
     "    orate,crate = old_ratings[key],current_ratings[key]\n",
