--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -810,8 +810,6 @@
     "    new_player['lastName'] = ' '.join(sname[1:])\n",
     "    year_gap = 0\n",
     "    if name in player_stats[py] and 'roster' in player_stats[py][name]:\n",
-    "        #if name == 'Ben Simmons':\n",
-    "        #    print(name,py)\n",
     "        exp_years =  player_stats[py][name]['roster'][0][5]\n",
     "        exp_years = int(0 if exp_years == 'R' else exp_years)\n",
     "\n",
@@ -847,7 +845,6 @@
     "            tid = -1\n",
     "        else:\n",
     "            continue\n",
-    "\n",
     "        new_player['tid'] = tid\n",
     "        new_player['pos'] = 'GF'\n",
     "        new_player['weight'] = 200\n",
@@ -866,14 +863,14 @@
     "        continue\n",
     "    #if name == 'Ben Simmons':\n",
     "    #    print(new_player)\n",
-    "    #print(year_gap)\n",
+    "    #print(year_gap,py,name)\n",
     "    scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
     "    sub_rookie = [0,-2,-4,-6][year_gap]\n",
     "    r_vec = {k: scale_rookie*ratings_f[i,y_keys.index(km)]+sub_rookie for k,km in y_map.items()}\n",
     "    #print(y_map.keys())\n",
-    "    r_vec['endu'] -= 4.5*year_gap\n",
-    "    r_vec['diq'] -= 4*year_gap\n",
-    "    r_vec['oiq'] -= 4*year_gap\n",
+    "    r_vec['endu'] -= 4.5*min(1,year_gap)\n",
+    "    r_vec['diq'] -= 4*min(1,year_gap)\n",
+    "    r_vec['oiq'] -= 4*min(1,year_gap)\n",
     "    r_vec = {k: int(np.clip(v,0,100)) for k,v in r_vec.items()}\n",
     "\n",
     "    new_player['ratings'] = [r_vec]\n",
