--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -355,7 +355,7 @@
     "player_names = []\n",
     "player_years = []\n",
     "player_scales = []\n",
-    "\n",
+    "player_heights = []\n",
     "for ty in tyear:\n",
     "    for name in player_stats[ty]:\n",
     "        #name = 'Jimmy Butler'\n",
@@ -364,7 +364,7 @@
     "        if not 'totals' in stats:\n",
     "            if ty == GEN_YEAR and name in player_stats[tyear[-1]] and 'totals' in player_stats[tyear[-1]][name]:\n",
     "                stats = player_stats[tyear[-1]][name]\n",
-    "                print(name,ty,tyear)\n",
+    "                #print(name,ty,tyear)\n",
     "            else:\n",
     "                continue\n",
     "        player_names.append(name)\n",
@@ -476,6 +476,7 @@
     "        player_scales.append(MP)\n",
     "        #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "        player_vectors.append([d[stat] for stat in X.columns])\n",
+    "        player_heights.append(d['Hgt'])\n",
     "X.columns"
    ]
   },
@@ -485,7 +486,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#stat_list\n",
     "#player_stats[2019]['Stephen Curry']['per_minute'][0][14]"
    ]
@@ -517,9 +517,10 @@
     "predict = clf.predict(Xn_fs)\n",
     "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
     "#ratings[:,0] = Xn[:,list(X.columns).index('Hgt')]\n",
-    "HGT_PRED = 0.75\n",
-    "if 'Hgt' in list(X.columns):\n",
-    "    ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* Xn[:,list(X.columns).index('Hgt')]\n",
+    "HGT_PRED = 0.25\n",
+    "#if 'Hgt' in list(X.columns):\n",
+    "#ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* np.array(player_heights)\n",
+    "ratings[:,0] = HGT_PRED*np.array(player_heights) + (1-HGT_PRED)*np.maximum(ratings[:,0],np.array(player_heights))\n",
     "# now we can sample directly from ratings\n",
     "\n",
     "# if we want to scale players down based on minutes played to replacement level\n",
@@ -539,6 +540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#ratings[:,0]\n",
     "#table_columns['per_minute']#,table_columns['advanced'].index('0-3')\n",
     "#for i,t in enumerate(player_stats[name]['advanced'][0]):\n",
     "#    print(i,t)"
@@ -562,6 +565,10 @@
    "source": [
     "_ = plt.hist(Xn[:,list(X.columns).index('FTp36')],150,density=True,alpha=0.5,label='NBA')\n",
     "_ = plt.hist(X['FTp36'],150,alpha=0.5,density=True,label='BBGM')\n",
+    "plt.legend()\n",
+    "plt.figure()\n",
+    "_ = plt.hist(player_heights,15,density=True,alpha=0.5,label='NBA')\n",
+    "_ = plt.hist(ratings[:,0],15,alpha=0.5,density=True,label='BBGM')\n",
     "plt.legend()"
    ]
   },
@@ -580,8 +587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n,v in zip(X.columns,Xn.max(0)):\n",
-    "    print(n,v)"
+    "#for n,v in zip(X.columns,Xn.max(0)):\n",
+    "#    print(n,v)"
    ]
   },
   {
@@ -600,7 +607,7 @@
     "            name = ' '.join(nsplit[:-1])\n",
     "        rosters[name] = team\n",
     "    #print(team,)\n",
-    "print(rosters)"
+    "#print(rosters)"
    ]
   },
   {
@@ -830,9 +837,7 @@
     "        new_player['weight'] = int(player_stats[py][name]['roster'][0][2])\n",
     "        ht = [int(_) for _ in player_stats[py][name]['roster'][0][1].split('-')]\n",
     "        new_player['hgt'] = ht[0]*12 + ht[1]\n",
-    "        #if name == 'Sleepy Floyd':\n",
-    "        #    print(ht,new_player)\n",
-    "        #new_player['draft'] = {'year':py-exp_years}\n",
+    "        new_player['draft'] = {'year':py-exp_years,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1,}\n",
     "\n",
     "        new_player['born'] = {'year':int(player_stats[py][name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
     "        if tyear[0]>=CURRENT_YEAR and 'contracts' in player_stats[py][name]:\n",
@@ -841,15 +846,26 @@
     "            if len(ctrct) > 0:\n",
     "                new_player['contract'] = {'amount':int(round(sum(ctrct)/(1000*len(ctrct)))),'exp':CURRENT_YEAR-1+len(ctrct)}\n",
     "    elif name in player_stats[py]:\n",
+    "        #print(name)\n",
     "        if py == GEN_YEAR:\n",
     "            tid = -1\n",
     "        else:\n",
     "            continue\n",
+    "        if py-1 in player_stats and name in player_stats[py-1]:\n",
+    "            exp_years =  player_stats[py-1][name]['roster'][0][5]\n",
+    "            exp_years = int(0 if exp_years == 'R' else exp_years)\n",
+    "            new_player['weight'] = int(player_stats[py-1][name]['roster'][0][2])\n",
+    "            ht = [int(_) for _ in player_stats[py-1][name]['roster'][0][1].split('-')]\n",
+    "            new_player['pos'] = player_stats[py-1][name]['roster'][0][0].replace('-','')\n",
+    "            new_player['hgt'] = ht[0]*12 + ht[1]\n",
+    "            new_player['born'] = {'year':int(player_stats[py-1][name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
+    "            new_player['draft'] = {'year':py-exp_years+1,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1}\n",
+    "        else:     \n",
+    "            new_player['pos'] = 'GF'\n",
+    "            new_player['weight'] = 200\n",
+    "            new_player['hgt'] = 6*12 + 8\n",
+    "            new_player['born'] = {'year':GEN_YEAR-28,'loc':''}\n",
     "        new_player['tid'] = tid\n",
-    "        new_player['pos'] = 'GF'\n",
-    "        new_player['weight'] = 200\n",
-    "        new_player['hgt'] = 6*12 + 8\n",
-    "        new_player['born'] = {'year':GEN_YEAR-28,'loc':''}\n",
     "    elif i > Xn.shape[0]:\n",
     "        print(name)\n",
     "        new_player['tid'] = int(-1)\n",
@@ -890,7 +906,7 @@
    "source": [
     "base['players'] = players\n",
     "with open('auto_roster_{}.json'.format(tyear[0]),'wt') as fp:\n",
-    "    json.dump(base,fp, indent=4, sort_keys=True)"
+    "    json.dump(base,fp, sort_keys=True)"
    ]
   },
   {
@@ -908,7 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[p for p in players if 'pos' in p]"
+    "#[p for p in players if 'pos' in p]"
    ]
   },
   {
@@ -917,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players[2]"
+    "#players[2]"
    ]
   },
   {
@@ -926,7 +942,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_stats[2019]['Kostas Antetokounmpo']"
+    "#player_stats[2019]['Kostas Antetokounmpo']"
    ]
   },
   {
@@ -935,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'Kostas Antetokounmpo' in rosters"
+    "#'Kostas Antetokounmpo' in rosters"
    ]
   },
   {
@@ -943,7 +959,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#players"
+   ]
   },
   {
    "cell_type": "code",
