--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -211,7 +211,7 @@
     "    w,h = idx//4,idx%4\n",
     "    plt.subplot(4,8,(1+8*h+w+4))\n",
     "    plt.hist(orate,20,label='simulated',alpha=0.5,density=True)\n",
-    "    plt.hist(crate,20,label='corrected',alpha=0.5,density=True,color='#2ca02c')\n",
+    "    plt.hist(crate,20,label='corrected',alpha=0.5,density=True)\n",
     "\n",
     "    plt.legend()\n",
     "    plt.title(key)\n",
