--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -103,6 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.round(replacement_player_std_r).astype(np.int)\n",
     "#_ =  plt.hist(X['OWSp36'],150)"
    ]
   },
@@ -540,6 +541,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "HGT_PRED = 0.5\n",
+    "player_heights = np.array(player_heights)\n",
+    "\n",
+    "def normalize(fro,to):\n",
+    "    tm,ts = to.mean(),to.std()\n",
+    "    fm,fs = fro.mean(),fro.std()\n",
+    "    z = (fro-fm)/fs\n",
+    "    return z*ts + tm\n",
+    "nr = normalize(ratings[:,0],player_heights)\n",
+    "tmp = np.clip(HGT_PRED*np.array(player_heights) + (1-HGT_PRED)*np.maximum(nr,player_heights),0,100)\n",
+    "\n",
+    "plt.figure(figsize=(12,4))\n",
+    "plt.subplot(1,3,1)\n",
+    "_ = plt.hist(player_heights,15,alpha=0.8,density=True,label='NBA')\n",
+    "_ = plt.hist(np.clip(ratings[:,0],0,100),15,alpha=0.5,density=True,label='Model')\n",
+    "plt.xlim(0,100)\n",
+    "plt.ylim(0,0.05)\n",
+    "plt.legend()\n",
+    "plt.subplot(1,3,2)\n",
+    "_ = plt.hist(player_heights,15,alpha=0.8,density=True,label='NBA')\n",
+    "plt.hist(tmp,15,alpha=0.5,density=True,label='Blended',color='#2ca02c')\n",
+    "plt.xlim(0,100)\n",
+    "plt.ylim(0,0.05)\n",
+    "plt.legend()\n",
+    "plt.subplot(1,3,3)\n",
+    "_ = plt.hist(df['Hgt'],15,alpha=0.8,density=True,label='BBGM',color='#7f7f7f')\n",
+    "plt.hist(tmp,15,alpha=0.5,density=True,label='Blended',color='#2ca02c')\n",
+    "plt.xlim(0,100)\n",
+    "plt.ylim(0,0.05)\n",
+    "plt.legend()\n",
+    "plt.savefig('test.png',edgecolor='w',facecolor='w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#ratings[:,0]\n",
     "#table_columns['per_minute']#,table_columns['advanced'].index('0-3')\n",
@@ -569,7 +609,9 @@
     "plt.figure()\n",
     "_ = plt.hist(player_heights,15,density=True,alpha=0.5,label='NBA')\n",
     "_ = plt.hist(ratings[:,0],15,alpha=0.5,density=True,label='BBGM')\n",
-    "plt.legend()"
+    "plt.title('height distribution')\n",
+    "plt.legend()\n",
+    "plt.xlim(0,100)"
    ]
   },
   {
