lets use opm/bpm

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in (['Creation','cTOV','Load','Age','MP'])]]\n",
+    "X = X[[_ for _ in X.columns if '%' in _ or _[-1]=='r' or 'FGP' in _ or \"+/-\" in _ or 'p36' in _ or _ in (['OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
     "\n",
     "replacement_filter = (df.Salary > 0.5) & (df.Salary < 1.0)\n",
     "replacement_player_mean_bs = X[replacement_filter].mean()\n",
@@ -180,7 +180,7 @@
     "    coeffs = clf.coefs_[-1][:,i]\n",
     "    v = np.argsort(abs(coeffs))[::-1]\n",
     "    print(c)\n",
-    "    coeffs2 = [(coeffs[i2],col_names[i2]) for i2 in v[:5]]\n",
+    "    coeffs2 = [(coeffs[i2],col_names[i2]) for i2 in v[:10]]\n",
     "    #for v,n in sorted(coeffs2,reverse=True):\n",
     "    #    print('{:.2f} * {} + '.format(v,n),end='')\n",
     "    print('| Variable | Coeff |')\n",
@@ -518,7 +518,7 @@
     "predict = clf.predict(Xn_fs)\n",
     "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
     "#ratings[:,0] = Xn[:,list(X.columns).index('Hgt')]\n",
-    "HGT_PRED = 0.25\n",
+    "HGT_PRED = 0.5\n",
     "#if 'Hgt' in list(X.columns):\n",
     "#ratings[:,0] = HGT_PRED*ratings[:,0] + (1-HGT_PRED)* np.array(player_heights)\n",
     "ratings[:,0] = HGT_PRED*np.array(player_heights) + (1-HGT_PRED)*np.maximum(ratings[:,0],np.array(player_heights))\n",
