--- a/ovr_comp.ipynb
+++ b/ovr_comp.ipynb
@@ -33,6 +33,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = np.sqrt(df['WS/48']*df['PER'])\n",
+    "#t = (df['WS/48']-df['WS/48'].mean())/df['WS/48'].std() #+ (df['PER']-df['PER'].mean())/df['PER'].std()\n",
+    "t2 =df.iloc[:,-15:]\n",
+    "t2f = (t < t.quantile(0.999)) & (t > t.quantile(0.001))\n",
+    "t2 = t2[t2f]\n",
+    "#t[t > (t.quantile(0.96))] = t.quantile(0.96)\n",
+    "t = t[t2f]\n",
+    "t = (t - t.mean())/t.std()\n",
+    "_ = plt.hist(t,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats\n",
+    "corr_weights = []\n",
+    "for i in range(t2.shape[1]):\n",
+    "    corr_weights.append(scipy.stats.spearmanr(t2.iloc[:,i],t)[0])\n",
+    "corr_weights = np.array(corr_weights)\n",
+    "corr_weights /= 2*corr_weights.min()\n",
+    "corr_weights = np.maximum(1,corr_weights)\n",
+    "corr_weights\n",
+    "df.columns[-15:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#_ = plt.hist(t2h,100,alpha=0.5,label='result',density=True)\n",
+    "#_ = plt.hist(t,100,alpha=0.5,label='gt',density=True)\n",
+    "nc = np.array([4,3,6,2,1,1,2,1,1,1,20,3,5,1,1])\n",
+    "nc = np.array([28,3,13,9,2,1,4,3,1,4,40,9,17,7,1])\n",
+    "nc = np.array([20,1,10,8,2,1,5,3,1,2,34,8,16,3,1])\n",
+    "nc = np.array([6,1,3,2,1,1,1,1,1,1,8,2,5,1,1])\n",
+    "nc = np.array([15,1,8,6,1,1,3,3,1,2,21,4,13,2,1])\n",
+    "nc = np.array([9,1,5,2,1,1,1,1,1,1,12,2,8,1,1,])\n",
+    "nc = np.array([18,1,10,6,1,1,3,1,1,4,29,6,13,3,2])\n",
+    "nc = np.array([17,1,11,5,1,1,4,1,1,4,26,10,12,5,1])\n",
+    "nc = np.array([17,2,11,5,2,1,5,2,1,5,22,7,12,6,3])\n",
+    "#nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
+    "#nc = corr_weights\n",
+    "nc2 = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
+    "\n",
+    "hk = t2 @ nc\n",
+    "if True:\n",
+    "    from sklearn import linear_model, preprocessing\n",
+    "    clf = linear_model.ElasticNet(1e-9,l1_ratio=0,positive=False,fit_intercept=True,max_iter=10000)\n",
+    "    #t2 = scalerX.fit_transform(np.array(t2))\n",
+    "    clf.fit(t2,t)\n",
+    "    t2h = clf.predict(t2)\n",
+    "    hk2 = (hk-hk.mean())/hk.std()\n",
+    "    _ = plt.hist(hk2,100,alpha=0.5,label='hacked',density=True)\n",
+    "    _ = plt.hist(t,100,alpha=0.5,label='gt',density=True)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    s = clf.coef_[np.where(clf.coef_ > 0)].min()\n",
+    "    for n,t3 in zip(df.columns[-15:],clf.coef_):\n",
+    "        print('{} {:.0f}'.format(n,t3/s),end=',')\n",
+    "import scipy.stats\n",
+    "scipy.stats.spearmanr(t2 @ nc,t)[0],scipy.stats.spearmanr(t2 @ nc2,t)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss(x):\n",
+    "    x = 100*x/x.sum()\n",
+    "    x = np.maximum(1,x)\n",
+    "    x = np.round(x)\n",
+    "    return 1-scipy.stats.pearsonr(t2 @ x,t)[0]\n",
+    "res = scipy.optimize.differential_evolution(loss,popsize=50,bounds=[(0,1) for _ in nc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nw = np.maximum(np.round(100*res.x/res.x.sum()),1)\n",
+    "\n",
+    "for i in nw:\n",
+    "    print(int(i),end=',')\n",
+    "nc = nw\n",
+    "hk = t2 @ nc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vd = hk/nc.sum()\n",
+    "tt = (t-t.mean())/t.std()\n",
+    "vdo =(t2 @ nc2)/nc2.sum()\n",
+    "_ = plt.hist(tt*vd.std()+vd.mean(),100,alpha=0.5,label='gt',density=True)\n",
+    "_ = plt.hist(vd,100,label='new',alpha=0.5,density=True)\n",
+    "_ = plt.hist(vdo,100,label='old',alpha=0.7,density=True)\n",
+    "\n",
+    "plt.legend()\n",
+    "#df = pd.read_csv('BBGM_League_2_all_seasons_Average_Stats.csv')\n",
+    "#df.shape\n",
+    "vdo.mean(),vd.mean(),vdo.std(),vd.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y = df.iloc[:,-15:]\n",
     "X = df.iloc[:,11:-17]\n",
     "y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
@@ -348,9 +479,6 @@
     "player_years = []\n",
     "player_scales = []\n",
     "player_heights = []\n",
-    "player_composites = []\n",
-    "compNames = ['CompUsg','CompPss','CompTOV','CompRim','CompLP','CompMR','CompTR','CompFT','CompRB','CompST','CompBlk','CompFL','CompDF']\n",
-    "\n",
     "for ty in tyear:\n",
     "    for name in player_stats[ty]:\n",
     "        #name = 'Jimmy Butler'\n",
@@ -464,9 +592,6 @@
     "        d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
     "        d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "        d['BPM'] = d['OPM']+d['DPM']\n",
-    "        \n",
-    "        fouls_drawn = int(stats['pbp'][0][14]) + int(stats['pbp'][0][15])\n",
-    "        fouls_commt = int(stats['pbp'][0][12]) + int(stats['pbp'][0][13])\n",
     "\n",
     "        MP = np.nan_to_num(stats['totals'][0][3])\n",
     "        #if np.isnan(mp_scale):\n",
@@ -475,24 +600,6 @@
     "        #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "        player_vectors.append([d[stat] for stat in X.columns])\n",
     "        player_heights.append(d['Hgt'])\n",
-    "\n",
-    "        d2 = {'CompUsg':stats['advanced'][0][14],\n",
-    "              'CompPss':d['Creation'],\n",
-    "              'CompTOV':d['cTOV'],\n",
-    "              'CompRim':d['AtRimFGP'],\n",
-    "              'CompLP':d['LowPostFGP'],\n",
-    "              'CompMR':d['MidRangeFGP'],\n",
-    "              'CompTR':d['3P%'],\n",
-    "              'CompFT':d['FT%'],\n",
-    "              'CompRB':d['TRB%'],\n",
-    "              'CompST':d['STL%'],\n",
-    "              'CompBlk':d['BLK%'],\n",
-    "              'CompFL':fouls_commt,\n",
-    "              'CompDF':fouls_drawn,\n",
-    "              'CompD':0}\n",
-    "        \n",
-    "        player_composites.append([d2[stat] for stat in compNames])\n",
-    "\n",
     "X.columns"
    ]
   },
@@ -503,7 +610,7 @@
    "outputs": [],
    "source": [
     "#stat_list\n",
-    "#player_stats[2019]['James Harden']['pbp'][0][12]#[14]"
+    "#player_stats[2019]['Stephen Curry']['per_minute'][0][14]"
    ]
   },
   {
@@ -1027,14 +1134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dkeys = [_.lower() for _ in ['Hgt', 'Stre', 'Spd', 'Jmp', 'Endu', 'Ins', 'Dnk', 'FT', 'fg', 'tp',\n",
-    "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']]\n",
-    "nc = np.array([17,1,11,5,1,1,4,1,1,4,26,10,12,5,1])\n",
-    "nc = np.array([17,2,11,5,2,1,5,2,1,5,22,7,12,6,3])\n",
-    "#nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
-    "#nc = corr_weights\n",
-    "nc2 = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
-    "nc3 = np.array([11,3,6,4,1,-4,4,3,-3,5,16,4,6,5,3])"
+    "#players"
    ]
   },
   {
@@ -1042,106 +1142,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "player_df = []\n",
-    "for p in players:\n",
-    "    if not 'name' in p:\n",
-    "        p['name'] = p['firstName'] + ' ' + p['lastName']\n",
-    "    d = {'name':p['name']}\n",
-    "    d.update(p['ratings'][0])\n",
-    "    d['ovr_og'] = sum([d[k]*v for k,v in zip(dkeys,nc2)])/nc2.sum()\n",
-    "    d['ovr_mn'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/nc.sum()\n",
-    "    d['ovr_mnr'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/np.maximum(0,nc3).sum()\n",
     "\n",
-    "    player_df.append(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf = pd.DataFrame(player_df).set_index('name')\n",
-    "pdf['diff'] = pdf['ovr_mn'] - pdf['ovr_og']\n",
-    "pdf['diffr'] = pdf['ovr_mnr'] - pdf['ovr_og']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_og'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_mn'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_mnr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['diff'],0,False)\n",
-    "#_ = plt.hist(pdf['diff'],100)\n",
-    "#plt.xlim(-3,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['diffr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(player_composites),len(player_names),len(ratings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fexp2 = preprocessing.PolynomialFeatures(degree=2,interaction_only=True)\n",
-    "scalerX3 = preprocessing.RobustScaler()\n",
-    "scalery3 = preprocessing.StandardScaler()\n",
-    "prescale_X3 = scalerX.fit_transform(ratings)\n",
-    "prescale_y3 = scalery.fit_transform(player_composites)\n",
-    "prescale_X3 = fexp.fit_transform(prescale_X3)\n",
     "\n",
-    "clf3= multioutput.MultiOutputRegressor(linear_model.Ridge(alpha=5e1))\n",
-    "clf3.fit(prescale_X3,prescale_y3)\n",
-    "yt = prescale_y3.inverse_transform(clf3.predict(prescale_X))\n",
-    "err = np.linalg.norm(yt-y)\n",
-    "ts.append((err,clf))"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
