--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -61,6 +61,7 @@
     "for p in base['players']:\n",
     "    if not 'name' in p:\n",
     "        p['name'] = p['firstName'] + ' ' + p['lastName']\n",
+    "    #del p['pos']\n",
     "    name = p['name'].rstrip().strip().replace('.','')\n",
     "    nsplit = name.split(' ')\n",
     "    if nsplit[-1] in ['Jr','Sr','III','II','Jr.','Sr.']:\n",
