--- a/regress_CBB.ipynb
+++ b/regress_CBB.ipynb
@@ -448,21 +448,21 @@
     "                    'TOV%':stats['advanced'][0][13],\n",
     "                    'USG%':stats['advanced'][0][14],\n",
     "                    '+/-':stats['advanced'][0][22],\n",
-    "                    'FGp36':stats['per_min'][0][3],\n",
-    "                    'FGAp36':stats['per_min'][0][4],\n",
-    "                    '3Pp36':stats['per_min'][0][7],\n",
-    "                    '3PAp36':stats['per_min'][0][8],\n",
-    "                    'FTp36':stats['per_min'][0][10],\n",
-    "                    'FTAp36':stats['per_min'][0][11],\n",
-    "                    'ORBp36':stats['per_min'][0][13],\n",
-    "                    'DRBp36':stats['per_min'][0][14],\n",
-    "                    'TRBp36':stats['per_min'][0][15],\n",
-    "                    'ASTp36':stats['per_min'][0][16],\n",
-    "                    'TOVp36':stats['per_min'][0][17],\n",
-    "                    'STLp36':stats['per_min'][0][18],\n",
-    "                    'Blkp36':stats['per_min'][0][19],\n",
-    "                    'PFp36':stats['per_min'][0][20],\n",
-    "                    'PTSp36':stats['per_min'][0][21],\n",
+    "                    'FGp36':stats['per_min'][0][3]*36/40,\n",
+    "                    'FGAp36':stats['per_min'][0][4]*36/40,\n",
+    "                    '3Pp36':stats['per_min'][0][7]*36/40,\n",
+    "                    '3PAp36':stats['per_min'][0][8]*36/40,\n",
+    "                    'FTp36':stats['per_min'][0][10]*36/40,\n",
+    "                    'FTAp36':stats['per_min'][0][11]*36/40,\n",
+    "                    'ORBp36':stats['per_min'][0][13]*36/40,\n",
+    "                    'DRBp36':stats['per_min'][0][14]*36/40,\n",
+    "                    'TRBp36':stats['per_min'][0][15]*36/40,\n",
+    "                    'ASTp36':stats['per_min'][0][16]*36/40,\n",
+    "                    'TOVp36':stats['per_min'][0][17]*36/40,\n",
+    "                    'STLp36':stats['per_min'][0][18]*36/40,\n",
+    "                    'Blkp36':stats['per_min'][0][19]*36/40,\n",
+    "                    'PFp36':stats['per_min'][0][20]*36/40,\n",
+    "                    'PTSp36':stats['per_min'][0][21]*36/40,\n",
     "                    'FGp100':stats['per_poss'][0][3],\n",
     "                    'FGAp100':stats['per_poss'][0][4],\n",
     "                    '3Pp100':stats['per_poss'][0][7],\n",
@@ -538,7 +538,7 @@
    "outputs": [],
    "source": [
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
-    "gen_FA = len(teams)*5\n",
+    "gen_FA = len(teams)*1\n",
     "first_n,len(teams),gen_FA\n"
    ]
   },
@@ -716,7 +716,9 @@
    "source": [
     "base = {'teams': [] }\n",
     "tids = {_:i for i,_ in enumerate(sorted(set(rosters.values())))}\n",
-    "confs = [tables[_]['conf'] for _ in tables]\n",
+    "dids = {_:i for i,_ in enumerate(sorted(set(tables[_]['conf'] for _ in tables)))}\n",
+    "\n",
+    "confs = sorted(list(set([tables[_]['conf'] for _ in tables])))\n",
     "conf_to_id = {'aac': (0,1),\n",
     " 'acc': (0,2),\n",
     " 'america-east': (0,0),\n",
@@ -752,7 +754,7 @@
     "abbrevs = set()\n",
     "for team in sorted(tables):\n",
     "    conf = tables[team]['conf']\n",
-    "    t = {'tid':tids[team],'cid':conf_to_id[conf][0],'did':conf_to_id[conf][1]}\n",
+    "    t = {'tid':tids[team],'cid':0,'did':dids[conf]}\n",
     "    name = tables[team]['name'].replace('&amp;','&')\n",
     "    nsplit = name.split(' ')\n",
     "    t['region'] = ' '.join(nsplit[:-1])\n",
@@ -774,13 +776,21 @@
     "            t['abbrev'] = 'MISSB'\n",
     "            abbrevs.add('MISSB')\n",
     "    base['teams'].append(t)\n",
+    "CONFS = []\n",
+    "for c in confs:\n",
+    "    CONFS.append({'did':dids[c], 'cid':conf_to_id[conf][0], 'name':c.upper()})\n",
     "    \n",
+    "base['gameAttributes'] = [{'key':'numGamesPlayoffSeries', 'value':[1 for i in range(5)]}]\n",
+    "base['gameAttributes'].append({'key':'divs', 'value': CONFS})\n",
+    "\n",
+    "base['gameAttributes'].append({'key':'confs', 'value': [{\"cid\": 0, \"name\": \"NCAA Basketball\"}] })\n",
     "\n",
     "for cid in range(2):\n",
     "    print(cid,len([_ for _ in base['teams'] if _['cid'] ==cid]))\n",
     "print()\n",
-    "for did in range(6):\n",
-    "    print(did,len([_ for _ in base['teams'] if _['did'] ==did]))"
+    "for did in range(len(dids)):\n",
+    "    print(did,len([_ for _ in base['teams'] if _['did'] ==did]))\n",
+    "CONFS"
    ]
   },
   {
@@ -1026,254 +1036,6 @@
    "outputs": [],
    "source": [
     "[(_['region'],_['tid']) for _ in base['teams']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#[p for p in players if 'pos' in p]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#players[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#player_stats[2019]['Kostas Antetokounmpo']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#'Kostas Antetokounmpo' in rosters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dkeys = [_.lower() for _ in ['Hgt', 'Stre', 'Spd', 'Jmp', 'Endu', 'Ins', 'Dnk', 'FT', 'fg', 'tp',\n",
-    "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']]\n",
-    "nc = np.array([17,1,11,5,1,1,4,1,1,4,26,10,12,5,1])\n",
-    "nc = np.array([17,2,11,5,2,1,5,2,1,5,22,7,12,6,3])\n",
-    "#nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
-    "#nc = corr_weights\n",
-    "\n",
-    "nc = np.array([4,8,13,3,1,9,9,2,2,2,16,2,5,16,8])\n",
-    "\n",
-    "nc2 = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
-    "nc3 = np.array([11,3,6,4,1,-4,4,3,-3,5,16,4,6,5,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_df = []\n",
-    "for p in players:\n",
-    "    if not 'name' in p:\n",
-    "        p['name'] = p['firstName'] + ' ' + p['lastName']\n",
-    "    d = {'name':p['name']}\n",
-    "    d.update(p['ratings'][0])\n",
-    "    d['ovr_og'] = sum([d[k]*v for k,v in zip(dkeys,nc2)])/nc2.sum()\n",
-    "    d['ovr_mn'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/nc.sum()\n",
-    "    #d['ovr_mnr'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/np.maximum(0,nc3).sum()\n",
-    "\n",
-    "    player_df.append(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf = pd.DataFrame(player_df).set_index('name')\n",
-    "pdf['diff'] = pdf['ovr_mn'] - pdf['ovr_og']\n",
-    "#pdf['diffr'] = pdf['ovr_mnr'] - pdf['ovr_og']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_og'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_mn'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pdf.sort_values(['ovr_mnr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['diff'],0,False)\n",
-    "#_ = plt.hist(pdf['diff'],40,density='True',label='NBA player OVR shift')\n",
-    "#plt.xlim(-10,10);plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('seaborn-white')\n",
-    "plt.figure(figsize=(6,6))\n",
-    "plt.plot([30,80],[30,80],'--',c='k',lw=3)\n",
-    "plt.scatter(pdf.ovr_og,pdf.ovr_mn,s=6)\n",
-    "plt.xlabel('original')\n",
-    "plt.ylabel('new')\n",
-    "plt.xlim(30,80)\n",
-    "plt.ylim(30,80)\n",
-    "plt.grid(True)\n",
-    "#pdf.sort_values(['diffr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if True:\n",
-    "    plt.figure(figsize=(6,6))\n",
-    "    plt.plot([30,80],[30,80],'--',c='k',lw=3)\n",
-    "    plt.scatter((y @ nc2)/nc2.sum(),(y @ nc)/nc.sum(),s=1,alpha=0.6)\n",
-    "    plt.xlabel('original')\n",
-    "    plt.ylabel('new')\n",
-    "    plt.xlim(30,80)\n",
-    "    plt.ylim(30,80)\n",
-    "    plt.grid(True)\n",
-    "    #pdf.sort_values(['diffr'],0,False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(player_composites),len(player_names),len(ratings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fexp3 = preprocessing.PolynomialFeatures(degree=2,interaction_only=True)\n",
-    "scalerX3 = preprocessing.RobustScaler()\n",
-    "scalery3 = preprocessing.StandardScaler()\n",
-    "prescale_X3 = scalerX3.fit_transform(ratings)\n",
-    "prescale_y3 = scalery3.fit_transform(player_composites)\n",
-    "#prescale_X3 = fexp3.fit_transform(prescale_X3)\n",
-    "\n",
-    "clf3= multioutput.MultiOutputRegressor(linear_model.ElasticNet(positive=False,alpha=3e-3,l1_ratio=.8,fit_intercept=False))\n",
-    "clf3.fit(prescale_X3,prescale_y3)\n",
-    "yt3 = scalery3.inverse_transform(clf3.predict(prescale_X3))\n",
-    "err3 = np.linalg.norm(yt3-player_composites)\n",
-    "err3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dkeys \n",
-    "for i,c in enumerate(compNames):\n",
-    "    coeffs = clf3.estimators_[i].coef_ \n",
-    "    v = np.argsort(abs(coeffs))[::-1]\n",
-    "    #print('\\n',c)\n",
-    "    coeffs2 = [(coeffs[i2]/coeffs.max(),dkeys[i2]) for i2 in v[:90]]\n",
-    "    print('\\n| {} |  |'.format(c[1:]))\n",
-    "    print('|----------|-------|')\n",
-    "    for v,n in sorted(coeffs2,reverse=True):\n",
-    "        if abs(v) < 0.1:\n",
-    "            continue\n",
-    "        print('|{:10s}|{:.1f}|'.format(n,10*v))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings = 'ratings'\n",
-    "weights = 'weights'\n",
-    "t= {\n",
-    "        ratings: [\"hgt\", \"spd\", \"drb\", \"dnk\", \"oiq\"],\n",
-    "        weights: [1, 1, 1, 1, 1],\n",
-    "}\n",
-    "t2= {\n",
-    "        ratings: ['dnk','drb','ins','oiq','ft'],\n",
-    "        weights: [6,4,3,2,-3],\n",
-    "}\n",
-    "rmax = 6/max(t['weights'])\n",
-    "rmax2 = 6/max(t2['weights'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('| Feature | Proposed | Current |'.format(c[1:]))\n",
-    "print('|---------|----------|---------|')\n",
-    "for w,r in sorted([(w,r) for r,w in zip(t2['ratings'],t2['weights'])],reverse=True):\n",
-    "    current = ' '\n",
-    "    if r in t['ratings']:\n",
-    "        current = '{:.1f}'.format(t['weights'][t['ratings'].index(r)]*rmax)\n",
-    "    print('|{:12s}|{:.1f}| {} |'.format(r,w*rmax2,current))\n",
-    "for w,r in sorted([(w,r) for r,w in zip(t['ratings'],t['weights'])],reverse=True):\n",
-    "    current = ''\n",
-    "    if r in t2['ratings']:\n",
-    "        continue\n",
-    "    print('|{:12s}|{}| {:.1f} |'.format(r,' ',w*rmax))"
    ]
   },
   {
