--- a/ovr_comp.ipynb
+++ b/ovr_comp.ipynb
@@ -33,10 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.sqrt(df['WS/48']*df['PER'])\n",
+    "t =  (df['WS/48']*df['WS']*df['PER']*df['EWA']) ** (1/4)\n",
     "#t = (df['WS/48']-df['WS/48'].mean())/df['WS/48'].std() #+ (df['PER']-df['PER'].mean())/df['PER'].std()\n",
     "t2 =df.iloc[:,-15:]\n",
-    "t2f = (t < t.quantile(0.999)) & (t > t.quantile(0.001))\n",
+    "t2f = (t < t.quantile(0.999)) & (t > t.quantile(0.1))\n",
     "t2 = t2[t2f]\n",
     "#t[t > (t.quantile(0.96))] = t.quantile(0.96)\n",
     "t = t[t2f]\n",
@@ -85,21 +85,34 @@
     "\n",
     "hk = t2 @ nc\n",
     "if True:\n",
-    "    from sklearn import linear_model, preprocessing\n",
+    "    from sklearn import linear_model, preprocessing, neural_network, ensemble\n",
+    "    #scalerX = preprocessing.StandardScaler()\n",
     "    clf = linear_model.ElasticNet(1e-9,l1_ratio=0,positive=False,fit_intercept=True,max_iter=10000)\n",
+    "    #clf = neural_network.MLPRegressor((32,8,4),activation='tanh')\n",
+    "   #clf = ensemble.GradientBoostingRegressor(n_estimators=100,max_depth=4)#25,max_depth=4)\n",
     "    #t2 = scalerX.fit_transform(np.array(t2))\n",
     "    clf.fit(t2,t)\n",
     "    t2h = clf.predict(t2)\n",
     "    hk2 = (hk-hk.mean())/hk.std()\n",
-    "    _ = plt.hist(hk2,100,alpha=0.5,label='hacked',density=True)\n",
+    "    _ = plt.hist(t2h,100,alpha=0.5,label='hacked',density=True)\n",
     "    _ = plt.hist(t,100,alpha=0.5,label='gt',density=True)\n",
     "\n",
     "    plt.legend()\n",
-    "    s = clf.coef_[np.where(clf.coef_ > 0)].min()\n",
+    "    s = clf.coef_.sum()/100#[np.where(clf.coef_ > 0)].min()\n",
     "    for n,t3 in zip(df.columns[-15:],clf.coef_):\n",
-    "        print('{} {:.0f}'.format(n,t3/s),end=',')\n",
+    "        print('{} {:.0f}'.format(n,t3/s),end=', ')\n",
     "import scipy.stats\n",
-    "scipy.stats.spearmanr(t2 @ nc,t)[0],scipy.stats.spearmanr(t2 @ nc2,t)[0]"
+    "scipy.stats.spearmanr(t2 @ nc,t)[0],scipy.stats.spearmanr(t2 @ nc2,t)[0],scipy.stats.spearmanr(t2h,t)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nc_lr = np.round(100*clf.coef_/clf.coef_.sum())\n",
+    "scipy.stats.spearmanr(t2 @ nc_lr,t)[0],[int(_) for _ in nc_lr]"
    ]
   },
   {
@@ -137,6 +150,15 @@
     "    print(int(i),end=',')\n",
     "nc = nw\n",
     "hk = t2 @ nc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.stats.spearmanr(t2 @ nw,t)[0],scipy.stats.spearmanr(t2 @ nc2,t)[0]"
    ]
   },
   {
