--- a/regress_WNBA.ipynb
+++ b/regress_WNBA.ipynb
@@ -234,7 +234,7 @@
     "            #print(table.index)\n",
     "            for row in table.itertuples():\n",
     "                name = row[0]\n",
-    "                name = name.replace('\\xa0\\xa0',' ')\n",
+    "                name = name.replace('\\xa0\\xa0',' ').replace('.','')\n",
     "                if name == 'Team Totals':\n",
     "                    continue\n",
     "                nsplit = name.split(' ')\n",
@@ -345,7 +345,42 @@
    "outputs": [],
    "source": [
     "#player_stats[2019]['Brandon Clarke']\n",
-    "#player_stats[2019]"
+    "#player_stats[2019]\n",
+    "from unidecode import unidecode\n",
+    "wnba_ros = pd.read_csv('wnba_rosters.csv')\n",
+    "wnba_ros.columns\n",
+    "unidecode\n",
+    "\n",
+    "\n",
+    "wnba_roster = {}\n",
+    "for row in wnba_ros.iterrows():\n",
+    "    name = unidecode(row[1]['name'])\n",
+    "    wnba_roster[name] = dict(row[1])\n",
+    "    hgt =  wnba_roster[name]['hgt']\n",
+    "    hgt2 = hgt.split('-')\n",
+    "    if hgt == \"Jun-00\":\n",
+    "         wnba_roster[name]['hgt'] = '6-0'\n",
+    "    else:\n",
+    "        hgt2[1] = str({'May':5,'Jun':6}[hgt2[1]])\n",
+    "        wnba_roster[name]['hgt'] = hgt2[1] + '-' + hgt2[0]\n",
+    "    if  wnba_roster[name]['exp'] == 'R':\n",
+    "        wnba_roster[name]['exp'] =0 \n",
+    "    wnba_roster[name]['exp'] = int(wnba_roster[name]['exp'])\n",
+    "    wnba_roster[name]['pos'] = wnba_roster[name]['pos'].replace('-','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yr = wnba_roster['Kelsey Plum']['dob'].split('-')[-1]\n",
+    "if yr[0] > '5':\n",
+    "    yr = '19' + yr\n",
+    "else:\n",
+    "    yr = '20' + yr\n",
+    "yr"
    ]
   },
   {
@@ -373,13 +408,18 @@
     "                stats = player_stats[tyear[-1]][name]\n",
     "            else:\n",
     "                continue\n",
-    "\n",
-    "        try:\n",
-    "            ht = [int(_) for _ in stats['roster'][0][3].split('-')]\n",
-    "            hgt = ht[0]*12 + ht[1]\n",
-    "        except:\n",
-    "            hgt=70\n",
-    "            #print(stats.keys())\n",
+    "        if not name in wnba_roster:\n",
+    "            print(name)\n",
+    "            continue\n",
+    "        \n",
+    "        ht = [int(_) for _ in wnba_roster[name]['hgt'].split('-')]\n",
+    "        hgt = ht[0]*12 + ht[1]\n",
+    "        yr = wnba_roster['Kelsey Plum']['dob'].split('-')[-1]\n",
+    "        if yr[0] > '5':\n",
+    "            yr = '19' + yr\n",
+    "        else:\n",
+    "            yr = '20' + yr\n",
+    "        \n",
     "        if ty >= 1980: # post 3pt era\n",
     "            if 'wnba_advanced' in stats:\n",
     "                d = {\n",
@@ -388,16 +428,15 @@
     "                'MidRangeFGP':stats['wnba_per_game'][0][8]*100*.8}\n",
     "            else:\n",
     "                continue\n",
-    "            if 'roster' in stats:\n",
-    "                d['Age']= {'FR':18, 'SO':19,'JR':20,'SR':21, '0.0':20}[stats['roster'][0][1]]\n",
-    "            else:\n",
-    "                d['Age']=np.random.randint(25,35)\n",
+    "            d['Age']= CURRENT_YEAR - int(yr)\n",
+    "\n",
     "                #print(name)\n",
     "            MP = np.maximum(1,np.nan_to_num(stats['wnba_totals'][0][2]))\n",
     "\n",
     "            try:\n",
     "                #for stat in X.columns:\n",
-    "                d.update({'FG%':stats['wnba_totals'][0][table_columns['wnba_per_game'].index('FG%')]*100,\n",
+    "                d.update({'Hgt': hgt,\n",
+    "                    'FG%':stats['wnba_totals'][0][table_columns['wnba_per_game'].index('FG%')]*100,\n",
     "                    'FG': stats['wnba_per_game'][0][table_columns['wnba_per_game'].index('FG')],\n",
     "                    'FGA': stats['wnba_per_game'][0][table_columns['wnba_per_game'].index('FGA')],\n",
     "                    '3P': stats['wnba_per_game'][0][table_columns['wnba_per_game'].index('3P')],\n",
@@ -459,7 +498,7 @@
     "                #    print(MP)\n",
     "                #    pprint.pprint({k:v for k,v in d.items() if not (('36' in k) or ('100' in k))} )\n",
     "                player_vectors.append([d[stat] for stat in X.columns])\n",
-    "                #player_heights.append(d['Hgt'])\n",
+    "                player_heights.append(d['Hgt'])\n",
     "                player_names.append(name)\n",
     "                player_years.append(ty)\n",
     "                #player_confs.append(rosters_conf[name])\n",
@@ -483,8 +522,7 @@
     "n =['G', 'GS', 'MP', 'FG', 'FGA', 'FG%', '2P', '2PA', '2P%', '3P', '3PA', '3P%', 'FT', 'FTA', 'FT%', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']\n",
     "#player_stats[2019]['James Harden']['pbp'][0][12]#[14]\n",
     "#for i in range(len(player_stats[2018]['Marvin Bagley']['per_min'][0])):\n",
-    "#    print(n[i], i,player_stats[2018]['Marvin Bagley']['per_min'][0][i])\n",
-    "\n"
+    "#    print(n[i], i,player_stats[2018]['Marvin Bagley']['per_min'][0][i])\n"
    ]
   },
   {
@@ -515,13 +553,16 @@
    "source": [
     "#Xn = np.nan_to_num(np.array(player_vectors))\n",
     "# tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
-    "scalerX2 = preprocessing.RobustScaler(quantile_range=(40.0, 60.0))\n",
+    "scalerX2 = preprocessing.RobustScaler(quantile_range=(30.0, 55.0))\n",
     "scalerX2.fit(Xn[:first_n])\n",
     "#scalerX2 = scalerX\n",
     "Xn_s =scalerX2.transform(np.nan_to_num(Xn))\n",
     "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
     "predict = clf.predict(Xn_fs)\n",
     "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
+    "HGT_PRED = 0.25\n",
+    "\n",
+    "ratings[:,0] = HGT_PRED*np.array(player_heights) + (1-HGT_PRED)*np.maximum(ratings[:,0],np.array(player_heights))\n",
     "\n",
     "# if we want to scale players down based on minutes played to replacement level\n",
     "if True:\n",
@@ -619,7 +660,7 @@
     "\n",
     "for team in all_tables[tyear[0]]:\n",
     "    for name in all_tables[tyear[0]][team]['wnba_totals'].index:\n",
-    "        name = name.replace('\\xa0\\xa0',' ')\n",
+    "        name = name.replace('\\xa0\\xa0',' ').replace('.','')\n",
     "        nsplit = name.split(' ')\n",
     "        if nsplit[-1] in ['Jr.','Sr.','I','II','III',\"IV\",'(TW)','Jr','Sr']:\n",
     "            name = ' '.join(nsplit[:-1])\n",
@@ -792,17 +833,27 @@
     "        \n",
     "        try:\n",
     "            new_player['tid'] = tid\n",
-    "            #new_player['pos'] = player_stats[py][name]['roster'][0][2].replace('-','')\n",
-    "            #new_player['weight'] = int(float(player_stats[py][name]['roster'][0][4]))\n",
+    "            ht = [int(_) for _ in wnba_roster[name]['hgt'].split('-')]\n",
+    "            hgt = ht[0]*12 + ht[1]\n",
+    "            yr = wnba_roster[name]['dob'].split('-')[-1]\n",
+    "            if yr[0] > '5':\n",
+    "                yr = '19' + yr\n",
+    "            else:\n",
+    "                yr = '20' + yr\n",
+    "            yr = int(yr)\n",
+    "            print\n",
+    "            years_exp = int(wnba_roster[name]['exp'])\n",
+    "            \n",
     "            try:\n",
-    "                ht = [int(_) for _ in player_stats[py][name]['roster'][0][3].split('-')]\n",
+    "                weight = int(wnba_roster[name]['weight'])\n",
     "            except:\n",
-    "                ht = [6,6]\n",
-    "            age = 25#{'FR':18, 'SO':19,'JR':20,'SR':21, '0.0':20}[player_stats[py][name]['roster'][0][1]]\n",
-    "            new_player['born'] = {'year':GEN_YEAR-age,'loc':''}\n",
-    "\n",
-    "            new_player['hgt'] = ht[0]*12 + ht[1]\n",
-    "            new_player['draft'] = {'year':py-1,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1,}\n",
+    "                weight = 180\n",
+    "            \n",
+    "            new_player['pos'] = wnba_roster[name]['pos']\n",
+    "            new_player['born'] = {'year':yr,'loc':''}\n",
+    "            new_player['weight'] = weight\n",
+    "            new_player['hgt'] = hgt\n",
+    "            new_player['draft'] = {'year':GEN_YEAR-years_exp ,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1,}\n",
     "        except:\n",
     "            print(name)\n",
     "            raise\n",
@@ -868,6 +919,13 @@
    "source": [
     "#[(_['region'],_['tid']) for _ in base['teams']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
