bring down ncaa salaries

--- a/regress_CBB.ipynb
+++ b/regress_CBB.ipynb
@@ -829,7 +829,7 @@
     "\n",
     "base['gameAttributes'].append({'key':'confs', 'value': [{\"cid\": i, \"name\": v} for i,v in enumerate(real_confs)] })\n",
     "base['gameAttributes'].append({'key':'numGames', 'value': 36})\n",
-    "\n",
+    "base['gameAttributes'].append({\"key\": \"maxContract\",\"value\": 7500})\n",
     "\n",
     "for cid in range(len(real_confs)):\n",
     "    print(cid,len([_ for _ in base['teams'] if _['cid'] ==cid]))\n",
