with the player smoothing back

--- a/regress_WNBA.ipynb
+++ b/regress_WNBA.ipynb
@@ -218,6 +218,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.MP.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "player_stats = {k:{} for k in tyear}\n",
     "table_columns = {}\n",
     "rosters = {}\n",
@@ -455,7 +464,7 @@
     "                    'OWS':stats['wnba_advanced'][0][table_columns['wnba_advanced'].index('OWS')],\n",
     "                    'DWS':stats['wnba_advanced'][0][table_columns['wnba_advanced'].index('DWS')],\n",
     "                    '3P%':stats['wnba_totals'][0][table_columns['wnba_totals'].index('3P%')]*100,\n",
-    "                    'MP':stats['wnba_per_game'][0][table_columns['wnba_per_game'].index('MP')],\n",
+    "                    'MP':stats['wnba_per_game'][0][table_columns['wnba_per_game'].index('MP')]*48/40,\n",
     "                    'FT%':stats['wnba_totals'][0][table_columns['wnba_totals'].index('FT%')]*100,\n",
     "                    'TS%':stats['wnba_advanced'][0][table_columns['wnba_advanced'].index('TS%')]*100,\n",
     "                    '3PAr':stats['wnba_advanced'][0][table_columns['wnba_advanced'].index('3PAr')]*100,\n",
