--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -680,8 +680,11 @@
     "\n",
     "# if we want to scale players down based on minutes played to replacement level\n",
     "if True:\n",
+    "    \n",
     "    c = np.array(player_scales).reshape((-1,1))\n",
-    "    c = np.tanh(c/256) # basically 1 by 512 MP\n",
+    "    scaling = (c.max()/3028) * 256 # adjust for era\n",
+    "\n",
+    "    c = np.tanh(c/scaling) # basically 1 by 512 MP\n",
     "\n",
     "    ratings[:Xn.shape[0]] = ratings[:Xn.shape[0]]*c + (1-c)*np.repeat(np.array(replacement_player_mean_r).reshape((-1,1)),Xn.shape[0],1).T"
    ]
